ribbit/tests/ui/unsupported_type.stderr
error: Only type paths are supported
 --> tests/ui/unsupported_type.rs:4:8
  |
4 |     a: (u8, u16),
  |        ^^^^^^^^^
